Tue Nov 21 11:00:14 2000  Darrell Brunsch <brunsch@uci.edu>

        * tests/run_test.lst:

          Borland shouldn't be running ACE_Init_Test.

Tue Nov 21 10:15:15 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/OS_String.inl:

          Changed ::towlower to towlower since it can be a macro.

Tue Nov 21 09:57:53 2000  Darrell Brunsch <brunsch@uci.edu>

        * tests/Reactor_Exceptions_Test.cpp:
          
          Code style fix.

        * tests/run_test.lst:

          New_Fail_Test just eats up memory when run, and it only tests
          the behavior of new.  Not really something we need to run 
          everynight (and as David Levine reports, using up all the 
          memory can cause problems in other processes on the nightly
          build machines).  Commented out the New_Fail_Test.
          
        * tests/run_test.pl:

          Fixed to clean up some of the backing_store_* files in the
          tests directory after running the tests.
 
        * bin/ACEutils.pm:

          Added the ability to pick -ExeSubDir <dir> from the command
          line to alter $EXEPREFIX.  This should allow us to start
          running tests with different configurations (ie. Win32 Release)
          and on Borland.

Tue Nov 21 07:24:54 2000  Chris Kohlhoff  <chris@kohlhoff.com>

	* ace/SSL/Makefile.bor:
	* include/makeinclude/build_dll.bor:
	* include/makeinclude/build_exe.bor:
	* include/makeinclude/build_lib.bor:

	  Prevent SSL libraries from being built unless SSL_ROOT is defined.

	* include/makeinclude/build_example.bor:

	  Add missing libraries required for statically linking TAO examples.

Mon Nov 20 21:52:57 2000  Ossama Othman  <ossama@uci.edu>

	* ace/Makefile.am:

	  Added more missing files to the source lists.

Mon Nov 20 19:16:12 2000  Ossama Othman  <ossama@uci.edu>

	* ace/OS.i (mutex_init):

	  Fixed an unused argument warning that was showing up in
	  ACE+Autoconf builds.

	* ace/Makefile.am (libACE_Utils_la_SOURCES):
