@@ -1,3 +1,11 @@
+Tue Nov 21 17:42:36 2000  Pradeep Gore  <pradeep@cs.wustl.edu>
+
+	* ace/IPC_SAP.cpp: 
+
+	Modified ACE_IPC_SAP::disable to call ::WSAEventSelect on Win32. 
+	Thanks to Chris Uzdavinis <chris@atdesk.com> for contributing
+	these changes.
+
 Tue Nov 21 11:00:14 2000  Darrell Brunsch <brunsch@uci.edu>
 
         * tests/run_test.lst:
